# polkadot-stps

./: .dockerignore  .gitignore  Cargo.toml  README.md  ecosystem_benchmarks.sh  polkadot-stps.sh  zombienet.sh
.github/workflows/: build-images-pr.yml  build-images.yml  poc-zombienet.yml  solo-tps-bench.yml  test-code.yml
chainspec-gen/: Cargo.toml
chainspec-gen/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  run.rs
crates/cli/src/logic/: init_logging.rs  mod.rs  run.rs
crates/cli/src/models/: cli_args.rs  cli_error.rs  mod.rs
crates/cli/src/models/cli_args/: cli_args.rs  mod.rs  spammer_args.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/logic/: derive_accounts.rs  get_nonce.rs  mod.rs  spammer.rs
crates/core/src/logic/spammer/: mod.rs  spammer_bootstrap.rs  spammer_run.rs
crates/core/src/models/: chain.rs  config.rs  error.rs  mod.rs  parameters.rs  sender.rs  set_with_item_count_of_at_least.rs  spammer.rs  spammer_parameters.rs  state.rs
crates/core/src/models/config/: any_account_id.rs  any_address.rs  any_config.rs  any_key_pair.rs  any_signature.rs  any_signer.rs  mod.rs
crates/core/src/models/ethereum/: eth_account_id.rs  eth_config.rs  eth_signer.rs  mod.rs
crates/core/src/models/polkadot/: mod.rs  polkadot_account_id.rs  polkadot_signer.rs
crates/core/src/models/traits/: mod.rs  to_debug_string.rs
crates/core/src/models/transaction/: batch_mode.rs  mod.rs  token_transfer.rs
docker/: parachain-collator_builder.Dockerfile
docs/: introduction.md  methodology.md  results.md
funded-accounts-json/: Cargo.toml
funded-accounts-json/src/: main.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/acala/: Cargo.toml
pallets/acala/src/: benchmarking.rs  mock.rs
pallets/astar/: Cargo.toml
pallets/astar/src/: benchmarking.rs  mock.rs
pallets/efinity/: Cargo.toml
pallets/efinity/src/: benchmarking.rs  mock.rs
pallets/moonbeam/: Cargo.toml
pallets/moonbeam/src/: benchmarking.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
sender/: Cargo.toml
sender/src/: main.rs
stps/: Cargo.toml
stps/src/: main.rs  metrics.rs
tests/: funded-accounts.json  genesis-wasm  relay-native.json  relay-native.zndsl  relay-single-node-native.json  relay-single-node-native.zndsl  relay-single-node.json  relay.feature  relay.json  relay.zndsl  sender.sh  utils.js
tests/astar/: polkadot-js-example.feature
tests/efinity/: 0001-simple-network.toml
tests/examples/: 0001-simple-network-with-accounts.json  0001-simple-network.toml  0002-wococo.toml  0003-node-override.toml  0004-global-overrides.toml  0005-logs.toml  0006-resources.toml  0008-custom-js.feature  0008-custom-js.toml  0009-simple-network-kubernetes.feature  0009-simple-network-kubernetes.toml
tests/kubernetes/: para-single-multiple-sender.zndsl  para-single.json  para-single.zndsl  relay-single-node.json  relay-single-node.zndsl  relay.json  relay.zndsl  sender.sh  set_sender_index.sh
tests/moonbeam/: polkadot-js-example.toml
tests/native/: multi-para-native.json  para-native.json  para-native.zndsl  parachain-native.json  relay-native.json  relay-native.zndsl  relay-single-node-native.json  relay-single-node-native.zndsl  sender.sh  single-para-native-big-blocklength.json  single-para-native-multiple-sender-big-block-length.zndsl  single-para-native-multiple-sender.zndsl  single-para-native.json  single-para-native.zndsl
tests/stps/: 2000tx.js  constants.js  funded-accounts.json  post_condition.js  pre_condition.js  relay-single-node.feature  relay-single-node.json  relay.feature  relay.json  relay.toml  rs_bindings.js  shared.js  single-para.feature  single-para.toml  solo.feature  solo.toml  standalone.js  tps_meter.js  transfer_keep_alive.js  utils.js  wait_for_events.js
utils/: Cargo.toml  build-images.sh  metadata.scale  push-images.sh  rococo-meta.scale
utils/charts/: README.md  chartmuseum.sh  example-helmfile.yaml  helmfile-versi.yaml
utils/charts/charts/: .gitignore
utils/charts/sender/: Chart.yaml  helmfile.yaml  stps-sender-0.1.0.tgz  values.yaml
utils/charts/sender/templates/: deployment.yaml
utils/charts/tps/: Chart.yaml  helmfile.yaml  stps-tps-0.1.0.tgz  stps-tps-scraper-0.1.0.tgz  values.yaml
utils/charts/tps/templates/: deployment.yaml
utils/config/: Cargo.toml
utils/config/src/: eth.rs
utils/dockerfiles/: Dockerfile.funder  Dockerfile.sender  Dockerfile.sender-any  Dockerfile.tps  README.md
utils/funder/: .gitignore  Cargo.toml
utils/funder/src/: lib.rs  main.rs
utils/metadata/: polkadot-parachain.scale  tick-meta.scale  versi-relay-meta.scale  versi-tick-meta.scale
utils/parachain-monitor/: Cargo.toml
utils/parachain-monitor/src/: main.rs
utils/sender/: Cargo.toml
utils/sender/src/: filler.rs  lib.rs  main.rs  sender.rs
utils/sender/src/pre/: mod.rs
utils/src/: lib.rs  main.rs  shared.rs
utils/src/funder/: mod.rs
utils/src/pre/: mod.rs
utils/src/sender/: mod.rs
utils/src/tps/: mod.rs
utils/tps/: Cargo.toml
utils/tps/src/: main.rs  prometheus.rs
