[package]
name = "chainspec-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"] }
subxt = "0.21.0"
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core" }
sp-keyring = { git = "https://github.com/paritytech/substrate", package = "sp-keyring" }

