[package]
name = "stps"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.20"
subxt = "0.33.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
anyhow = "1.0.81"
zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
#zombienet-sdk = { path = "../../zombienet-sdk/crates/sdk" }
funder = { path = "../utils/funder" }
sender = { path = "../utils/sender" }
serde = "1.0.197"
serde_json = "1.0.114"
clap-num = "1.1.1"
futures = "0.3.30"
parity-scale-codec = "3.6.9"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
