[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
sp-keyring = "7.0.0"
sp-runtime = "7.0.0"
sp-core = { version = "7.0.0", default-features = false  }
tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros", "time"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = "0.25.0"
log = "0.4.16"

[features]
default = [ "rococo" ]
rococo = []
tick = []