[package]
name = "funder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = ".." }
log = "0.4.18"
env_logger = "0.10.0"
futures = "0.3.28"
serde_json = "1.0.96"
sp-core = { version = "21.0.0", default-features = false  }
sp-runtime = "24.0.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4.3.1", features = ["derive"] }