[package]
name = "funder"
version = "0.1.0"
edition = "2021"

[lib]
name = "funder_lib"
path = "src/lib.rs"

[[bin]]
name = "funder"
path = "src/main.rs"

[dependencies]
log = "0.4.18"
env_logger = "0.10.0"
serde_json = "1.0.96"
subxt.workspace = true
clap = { version = "4.3.1", features = ["derive"] }
sp-core.workspace = true
