[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funder = { path = "../funder" }
log = "0.4.16"
env_logger = "0.10.0"
subxt = { workspace = true, features = ["jsonrpsee"] }
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
codec = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = [
	"derive",
	"full",
	"bit-vec",
] }
futures = "0.3.28"
frame-system.workspace = true
pallet-balances.workspace = true
url = "2.5"
jsonrpsee-client-transport.workspace = true
jsonrpsee-core.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true

[lib]
name = "sender_lib"
path = "src/lib.rs"

[[bin]]
name = "sender"
path = "src/main.rs"
