[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funder = { path = "../funder" }
stps-config = { path = "../config" }
log = "0.4.16"
env_logger = "0.10.0"
subxt.workspace = true
subxt-signer.workspace = true
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
codec.workspace = true
futures = "0.3.28"
frame-system.workspace = true
pallet-balances.workspace = true
url = "2.5"
jsonrpsee-client-transport.workspace = true
jsonrpsee-core.workspace = true
sp-core.workspace = true
rand = { version = "0.9.0" }

[lib]
name = "sender_lib"
path = "src/lib.rs"

[[bin]]
name = "spammer"
path = "src/main.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"
