[package]
name = "tps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = ".."}
log = "0.4.16"
env_logger = "0.9.0"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }

[[bin]]
name = "tps"

[features]
tick = ["utils/tick"]
rococo = ["utils/rococo"]